weekly progress component on dashboard done

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,12 @@
   background-color: black;
   color: white;
 }
+
+/* customer dashboard */
+.menu-item {
+  cursor: pointer;
+}
+
+.weekly-progress {
+  width: 10%;
+}
