--- a/src/App.css
+++ b/src/App.css
@@ -54,9 +54,74 @@ body {
 }
 
 /* classes */
+.classHeader{
+  height: 220px;
+  background-image: url('https://images.unsplash.com/photo-1517838277536-f5f99be501cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');
+  background-size: cover;
+	background-position: center ;
+	background-attachment: fixed;
+  background-repeat: no-repeat;
+  display: flex;
+}
+
+.classHeader h3 {
+  font-size: 50px;
+  padding-left: 1em;
+}
+
+.classData {
+  margin-top: 1em;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.classBoxes1 {
+  margin-bottom: 1.5em;
+  width: 30%;
+}
+
+.classBoxes2 img {
+  width: 90%;
+  height: 300px;
+}
+
+.classBoxes2 img:hover {
+  transform: scale(1.1);
+  transition: all .3s ease-in-out;
+}
+
+.classBoxes2 h2 {
+  font-size: 30px;
+}
+
+.classBoxes2 p {
+  color: #B2BAB0;
+}
+
+.classes-button {
+  color: #c5302e;
+  border: none;
+  background-color: black;
+  padding: 0;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.classModalCard{
+  border: 1px solid blue;
+  
+}
+
+.classCard{
+  border: 1px solid purple;
+  
+}
+
 .modal {
   font-size: 12px;
-  background-color: red;
+  background-color: black;
   color: white;
 }
 .modal > .header {
