--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ body {
 }
 
 .classData {
-  margin-top: 1em;
+  margin-top: 1.5em;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
@@ -83,7 +83,8 @@ body {
 
 .classBoxes2 img {
   width: 90%;
-  height: 300px;
+  height: 330px;
+  cursor: pointer;
 }
 
 .classBoxes2 img:hover {
@@ -109,38 +110,52 @@ body {
   cursor: pointer;
 }
 
+/* modal for classes */
 .classModalCard{
-  border: 1px solid blue;
-  
+  border: 1px solid #c5302e;
+  display: flex;
 }
 
-.classCard{
-  border: 1px solid purple;
-  
+.classModalCard img{
+  padding: 1em;
+  width: 40%;
+  height: 450px;
+}
+
+.classCard h2 {
+  font-size: 25px;
+}
+
+.classCard button {
+  color: #c5302e;
+  border: 1px solid red;
+  background-color: black;
+  padding: 0.5em;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.classCard p {
+  color: #B2BAB0;
+  padding-right: 1em;
+}
+
+.classCard span{
+  padding-right: 0.5em;
+}
+
+.popup-content {
+  margin: auto;
+  width: 50%;
+  background-color: rgb(255, 255, 255);
 }
 
 .modal {
-  font-size: 12px;
   background-color: black;
   color: white;
 }
-.modal > .header {
-  width: 100%;
-  border-bottom: 1px solid gray;
-  font-size: 18px;
-  text-align: center;
-  padding: 5px;
-}
-.modal > .content {
-  width: 100%;
-  padding: 10px 5px;
-}
-.modal > .actions {
-  width: 100%;
-  padding: 10px 5px;
-  margin: auto;
-  text-align: center;
-}
+
 .modal > .close {
   cursor: pointer;
   position: absolute;
