--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,49 @@ body {
   color: white;
 }
 
+.App {
+  display: flex;
+  flex-direction: column;
+}
+
 /* homepage */
+.navBar {
+  position: fixed;
+  top: 0%;
+  display: flex;
+  margin: 0;
+  width: 100%;
+}
+
+.test {
+  width: 100%;
+  padding-left: 3em;
+  padding-right: 3em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+}
+
+.test a {
+  font-size: 20px;
+  text-decoration: none;
+  color: white;
+  padding-right: 1em;
+}
+
+.test button {
+  background-color: transparent;
+  color: #c5302e;
+  border: 2px solid #c5302e;
+  padding: 0.8em;
+  font-weight: 800;
+  cursor: pointer;
+}
+
 .splashLanding {
-  margin-bottom: 3em;
-  height: 500px;
+  margin-bottom: 5em;
+  height: 80vh;
   background-image: url('https://images.unsplash.com/photo-1541534741688-6078c6bfb5c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80');
   background-size: cover;
 	background-position: center ;
@@ -18,28 +57,8 @@ body {
 }
 
 .homePage h1 {
-  font-size: 55px;
-  margin-left: 1em;
-}
-
-.navBar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.navBar a {
-  text-decoration: none;
-  color: white;
-  margin-right: 1em;
-}
-
-.navBar button {
-  background-color: transparent;
-  color: #c5302e;
-  border: 2px solid #c5302e;
-  padding: 0.8em;
-  font-weight: 750;
+  font-size: 70px;
+  padding: 3em 0 0 2em;
 }
 
 /* about us section */
@@ -117,6 +136,7 @@ body {
 }
 
 .classBoxes2 img {
+  object-fit: cover;
   width: 90%;
   height: 330px;
   cursor: pointer;
