--- a/src/App.css
+++ b/src/App.css
@@ -49,11 +49,21 @@ body {
 
 .splashLanding {
   margin-bottom: 5em;
+}
+
+#video {
+  object-fit: cover;
+  width: 100%;
   height: 80vh;
-  background-image: url('https://images.unsplash.com/photo-1541534741688-6078c6bfb5c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80');
-  background-size: cover;
-	background-position: center ;
-  background-repeat: no-repeat;
+}
+
+.homePage {
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .homePage h1 {
@@ -76,7 +86,13 @@ body {
   font-size: 50px;
 }
 
+.aboutInfo p {
+  color: #B2BAB0;
+}
+
 .aboutData {
+  padding: 1em 0;
+  margin-bottom: 2em;
   width: 70%;
   display: flex;
   justify-content: flex-end;
@@ -84,12 +100,14 @@ body {
 }
 
 .aboutUsBoxes {
+  padding-bottom: 1em;
   width: 45%;
   margin-bottom: 2em;
 }
 
 .aboutBox p {
   width: 80%;
+  color: #B2BAB0;
 }
 
 .aboutBox h3 {
@@ -97,6 +115,7 @@ body {
 }
 
 .aboutBox img {
+  object-fit: cover;
   width: 80%;
   height: 450px;
 }
@@ -104,18 +123,19 @@ body {
 .aboutBox img:hover {
   transform: scale(1.1);
   transition: all .3s ease-in-out;
-
 }
 
 /* classes */
 .classHeader{
-  height: 220px;
+  height: 250px;
   background-image: url('https://images.unsplash.com/photo-1517838277536-f5f99be501cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');
   background-size: cover;
 	background-position: center ;
 	background-attachment: fixed;
   background-repeat: no-repeat;
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .classHeader h3 {
@@ -124,15 +144,15 @@ body {
 }
 
 .classData {
-  margin-top: 1.5em;
+  margin-top: 3em;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
 .classBoxes1 {
-  margin-bottom: 1.5em;
-  width: 30%;
+  margin-bottom: 2em;
+  width: 28%;
 }
 
 .classBoxes2 img {
@@ -152,6 +172,7 @@ body {
 }
 
 .classBoxes2 p {
+  width: 80%;
   color: #B2BAB0;
 }
 
@@ -167,12 +188,12 @@ body {
 
 /* modal for classes */
 .classModalCard{
-  border: 1px solid #c5302e;
   display: flex;
   background-color: black;
 }
 
 .classModalCard img{
+  object-fit: cover;
   padding: 1em;
   width: 40%;
   height: 450px;
@@ -230,9 +251,7 @@ body {
 
 /* icon section */
 .iconSection {
-  padding: 2em 0 1em 0;
-  margin-top: 1em;
-  margin-bottom: 2em;
+  margin: 7em 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -242,6 +261,7 @@ body {
 .iconMap {
   border-bottom: 1px solid #c5302e;
   border-top: 1px solid #c5302e;
+  padding: 2em 0;
   width: 70%;
   display: flex;
   justify-content: space-between;
@@ -257,12 +277,12 @@ body {
 
 .iconCard span {
   padding-top: 2em;
-  font-size: 30px;
+  font-size: 35px;
 }
 
 /* membership section */
 .membership-section {
-  background-image: url('https://images.unsplash.com/photo-1603665409265-bdc00027c217?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80');
+  background-image: url('https://images.pexels.com/photos/7676548/pexels-photo-7676548.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
   background-size: cover;
 	background-position: top ;
   background-repeat: no-repeat;
@@ -281,6 +301,9 @@ body {
   margin: 1em;
   display: flex;
   flex-direction: column;
+  padding: 2em;
+  background-color: rgba(0, 0, 0, 0.4);
+  background-blend-mode: darken;
 }
 
 .membership-map {
@@ -309,7 +332,8 @@ body {
   cursor: pointer;
   background-color: transparent;
   color: #c5302e;
-  border: 1px solid #c5302e;
+  font-weight: 800;
+  border: 2px solid #c5302e;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -342,6 +366,7 @@ body {
 
 /* carousel reviews */
 .reviewSection {
+  margin: 3em 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -362,7 +387,8 @@ body {
 
 /* footer section */
 .footer-section {
-  margin-top: 3em;
+  margin-top: 5em;
+  padding: 2em;
   border-top: 1px solid #B2BAB0;
   display: flex;
   justify-content: space-between;
@@ -370,7 +396,6 @@ body {
 }
 
 .title-icons {
-  padding: 1em;
   font-size: 20px;
 }
 
@@ -384,13 +409,19 @@ body {
   text-align: center;
 }
 
-.subscription {
-  padding: 1em;
+.subscription input {
+  background-color: transparent;
+  color: white;
+  border: 1px solid #c5302e;
+  padding: 0.5em;
 }
 
 .subscription button {
   background-color: transparent;
   color: #c5302e;
+  cursor: pointer;
+  border: 1px solid #c5302e;
+  padding: 0.5em;
 }
 
 
