--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@ body {
   position: fixed;
   top: 0%;
   display: flex;
-  margin: 0;
   width: 100%;
+  z-index:1001;
 }
 
 .test {
@@ -31,11 +31,12 @@ body {
   background-color: transparent;
 }
 
-.test a {
+.test a, .shopping-cart {
   font-size: 20px;
   text-decoration: none;
   color: white;
   padding-right: 1em;
+  cursor: pointer;
 }
 
 .test button {
@@ -45,6 +46,11 @@ body {
   padding: 0.8em;
   font-weight: 800;
   cursor: pointer;
+}
+
+.test button:hover {
+  background-color: #c5302e;
+  color: white;
 }
 
 .splashLanding {
