--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body {
   display: flex;
   width: 100%;
   z-index:1001;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .test {
@@ -40,13 +41,26 @@ body {
   cursor: pointer;
 }
 
-.test button, .cart button {
+.nav-quantity {
+  font-size: 12px;
+  text-align: center;
+  border: 1px solid #c5302e;
+  background-color: #c5302e;
+  border-radius: 100%;
+  padding: 0.3em;
+  height: 10px;
+  line-height: 10px;
+  position: absolute;
+}
+
+.test button {
   background-color: transparent;
   color: #c5302e;
   border: 2px solid #c5302e;
   padding: 0.8em;
   font-weight: 800;
   cursor: pointer;
+  margin-left: 1em;
 }
 
 .test button:hover {
@@ -86,6 +100,41 @@ body {
   align-items: center;
 }
 
+.cart {
+  width: 80%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.cart h3 {
+  margin-top: 2em;
+}
+
+.cart-card button {
+  transition: 850ms;
+}
+
+.cart button{
+  margin: 0%;
+  border:1px solid #c5302e;
+  color: white;
+  background-color: #c5302e;
+  padding: 0.7em;
+  border-radius: 10px;
+}
+
+.cart button:hover {
+  background-color: #191919;
+  color: #cfcece;
+  border: 1px solid #191919;
+  transform: scale(1.1);
+  transition: all .3s ease-in-out;
+}
+
+/* background video */
 .splashLanding {
   margin-bottom: 5em;
 }
@@ -123,7 +172,7 @@ body {
   align-items: center;
 }
 
-.homePage button:hover, .formItem button:hover {
+.homePage button:hover, .formItem button:hover{
   border: 1px solid black;
   background-color: black;
   transition: background-color .3s ease-in-out;
@@ -321,13 +370,18 @@ body {
 }
 
 .classCard button, .membershipModalCard button {
-  color: #c5302e;
+  color: white;
   border: 1px solid red;
-  background-color: black;
+  background-color: #c5302e;
   padding: 0.5em;
   font-weight: bold;
   font-size: 16px;
   cursor: pointer;
+}
+
+.classCard button:hover, .membershipModalCard button:hover {
+  background-color: black;
+  transition: background-color .3s ease-in-out;
 }
 
 .classCard p {
@@ -345,7 +399,7 @@ body {
 }
 
 .popup-overlay {
-  background: rgba(0, 0, 0, 0.6)
+  background: rgba(0, 0, 0, 0.6);
 }
 
 .modal {
