--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ body {
 
 /* checkout styling */
 .nav-menu {
-  background: rgba(0, 0, 0, 0.6);
+  background: #080808;
   color: white;
   width: 350px;
   height: 100vh;
